--- a/demos/cavity.ipynb
+++ b/demos/cavity.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Third Annual Cavity Meeting\n",
+    "# CAVITY Demo\n",
     "### Examples of profiles for different galaxies\n",
     "\n",
     "In this tutorial I will show how to use the library for doing the **profiles** with the tools developed. We will:\n",
