--- a/demos/cavity.ipynb
+++ b/demos/cavity.ipynb
@@ -29,7 +29,9 @@
    "source": [
     "### 1. Download the image from the Legacy Survey DR10\n",
     "\n",
-    "We will use the module *query* to download a cutout image from the galaxy NGC3344 in *r*-band from the Legacy Survey DR10. We will use this image to measure its surface brightness profiles. We first declare the right ascension and declination coordinates of the galaxy and the size of the cutout. Then, we call the function *des_mosaic* to download the image from the Legacy Survey DR10. First time we run this cell will take some minutes since it has to download the image, then when running again, it will check if its downloaded to avoid downloading it again.\n"
+    "We will use the module *query* to download a cutout image from the galaxy NGC3344 in *r*-band from the Legacy Survey DR10. We will use this image to measure its surface brightness profiles. We first declare the right ascension and declination coordinates of the galaxy and the size of the cutout. Then, we call the function *des_mosaic* to download the image from the Legacy Survey DR10. First time we run this cell will take some minutes since it has to download the image, then when running again, it will check if its downloaded to avoid downloading it again.\n",
+    "\n",
+    "In this example, it will take the different parameters from the catalog *cavity_demo.csv* file. You can change the **index** variable to change the galaxy."
    ]
   },
   {
@@ -236,11 +238,11 @@
     "### 4. Calculate the Surface Brightness Profiles fitting the isophotes of the galaxy.\n",
     "\n",
     "\n",
-    "We will use the **Elliptical Isophote Analysis** method implemented in *photutils.isophote* described by *Jedrzejewski (1987; MNRAS 226, 747)* to fit at each radial bin the morphological parameters for every ishophote. This method is quite old already, works just right, its quite slow and needs some parameters to start the procedure. In this sense we have to give the morphological parameters (pa, ellipticity and radius) for the initial step from which it will start the iterative fitting. This is very sensible and it can fail (see Troubleshooting <a name=\"TB1\"></a>[1](#TB1))\n",
+    "We will use the **Elliptical Isophote Analysis** method implemented in *photutils.isophote* described by *Jedrzejewski (1987; MNRAS 226, 747)* to fit at each radial bin the morphological parameters for every ishophote. This method is quite old already, works just right, its quite slow and needs some parameters to start the procedure. In this sense we have to give the morphological parameters (pa, ellipticity and radius) for the initial step from which it will start the iterative fitting. This is very sensible and it can fail (see Troubleshooting 2)\n",
     "\n",
     "\n",
     "\n",
-    "**WARNING:** The method is very slow, and can take several minutes to complete the fitting process. Be patient :D\n"
+    "**WARNING:** The method is very slow, and can take several minutes to complete the fitting process. Be patient :D. Also, be aware that warnings are disable and that the message of not being able to fit (see Troubleshooting 2) would not appear.\n"
    ]
   },
   {
